# logstalgia-windows

./: CMakeLists.txt  LICENSE  README.md
src/core/: README  bounds.h  conffile.cpp  conffile.h  display.cpp  display.h  frustum.cpp  frustum.h  fxfont.cpp  fxfont.h  gl.h  logger.cpp  logger.h  mousecursor.cpp  mousecursor.h  pi.h  plane.cpp  plane.h  png_writer.cpp  png_writer.h  ppm.cpp  ppm.h  quadtree.cpp  quadtree.h  regex.cpp  regex.h  resource.cpp  resource.h  sdlapp.cpp  sdlapp.h  seeklog.cpp  seeklog.h  settings.cpp  settings.h  shader.cc  shader.cpp  shader.h  shader.hh  shader_common.cpp  shader_common.h  (+14 more)
src/core/ui/: action.h  button.cpp  button.h  checkbox.cpp  checkbox.h  colour.cpp  colour.h  console.cpp  console.h  element.cpp  element.h  file_selector.cpp  file_selector.h  group.cpp  group.h  image.cpp  image.h  label.cpp  label.h  layout.cpp  layout.h  scroll_bar.cpp  scroll_bar.h  scroll_layout.cpp  scroll_layout.h  select.cpp  select.h  slider.cpp  slider.h  solid_layout.cpp  solid_layout.h  subgroup.cpp  subgroup.h  ui.cpp  ui.h
